	PR debug/55717 	* rtlhooks-def.h (RTL_HOOKS_GEN_LOWPART_NO_EMIT): Define to 	gen_lowpart_if_possible. 	(gen_lowpart_no_emit_general): Remove prototype. 	* rtlhooks.c (gen_lowpart_no_emit_general): Removed. 	* simplify-rtx.c (simplify_unary_operation_1, 	simplify_binary_operation_1): Continue simplifying if 	rtl_hooks.gen_lowpart_no_emit returns NULL_RTX. 	* dwarf2out.c (mem_loc_descriptor) <case TRUNCATE>: Handle 	truncation like lowpart SUBREG.

* testsuite/g++.dg/opt/pr55717.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@194575 138bc75d-0d04-0410-961f-82ee72b054a4